added expirydays field. refactored sticker creation process